dag-dsl/tests/compile_fail/connect_mismatched_payload.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/connect_mismatched_payload.rs:58:34
   |
58 |     dag.connect(s.out.ok.result, d.inp.value);
   |         -------                  ^^^^^^^^^^^ expected `InPort<i64>`, found `InPort<String>`
   |         |
   |         arguments to this method are incorrect
   |
   = note: expected struct `InPort<i64>`
              found struct `InPort<String>`
note: method defined here
  --> src/typed.rs
   |
   |     pub fn connect<V, T>(&mut self, from: OutPort<V, T>, to: InPort<T>) -> &mut Self {
   |            ^^^^^^^
